<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:gravity="center_horizontal"
        android:textSize="80sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username"
        android:id="@+id/username"
        android:layout_marginTop="25dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/email"
        android:id="@+id/email"
        android:layout_marginTop="5dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_marginTop="5dp"
        android:password="true"
        android:selectAllOnFocus="true"
        android:hint="@string/password"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password"
        android:layout_marginTop="5dp"
        android:password="true"
        android:selectAllOnFocus="true"
        android:hint="@string/confirm_pass"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register" />

</LinearLayout>