<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_app"
        android:gravity="center_horizontal"
        android:textSize="75sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/email"
        android:id="@+id/email"
        android:layout_marginTop="40dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_marginTop="5dp"
        android:password="true"
        android:selectAllOnFocus="true"
        android:hint="@string/password"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="19sp"
        android:clickable="true"/>

</LinearLayout>
